@@ -7623,6 +7623,16 @@ bool MainWorker::SwitchLightInt(const std::vector<std::string> &sd, std::string 
 			else if (switchtype==STYPE_X10Siren) {
 				level=15;
 			}
+			else if (switchtype==STYPE_BlindsPercentage) {
+				if (level==15)
+				{
+					lcmd.LIGHTING2.cmnd=light2_sOn;
+				}
+				else if (level==0)
+				{
+					lcmd.LIGHTING2.cmnd=light2_sOff;
+				}
+			}
 			if (level>15)
 				level=15;
 			lcmd.LIGHTING2.level=(unsigned char)level;
