@@ -196,6 +196,18 @@ function RefreshFavorites()
 										}
 									}
 								}
+								else if (item.SwitchType == "Blinds Percentage") {
+									if (item.Status == 'Closed') {
+										status=
+											'<button class="btn btn-mini" type="button" onclick="SwitchLight(' + item.idx + ',\'Off\',RefreshFavorites);">' + $.i18n("Open") +'</button> ' +
+											'<button class="btn btn-mini btn-info" type="button" onclick="SwitchLight(' + item.idx + ',\'On\',RefreshFavorites);">' + $.i18n("Closed") +'</button>';
+									}
+									else {
+										status=
+											'<button class="btn btn-mini btn-info" type="button" onclick="SwitchLight(' + item.idx + ',\'Off\',RefreshFavorites);">' + $.i18n("Open") +'</button> ' +
+											'<button class="btn btn-mini" type="button" onclick="SwitchLight(' + item.idx + ',\'On\',RefreshFavorites);">' + $.i18n("Close") +'</button>';
+									}
+								}
 								else if (item.SwitchType == "Dimmer") {
 									var img="";
 									if (
@@ -368,6 +380,16 @@ function RefreshFavorites()
 											img='<img src="images/blindsopen48sel.png" title="' + $.i18n("Open Blinds") +'" onclick="SwitchLight(' + item.idx + ',\'On\',RefreshFavorites);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="40">';
 											img2='<img src="images/blinds48.png" title="' + $.i18n("Close Blinds") +'" onclick="SwitchLight(' + item.idx + ',\'Off\',RefreshFavorites);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="40">';
 										}
+									}
+								}
+								else if (item.SwitchType == "Blinds Percentage") {
+									if (item.Status == 'Closed') {
+										img='<img src="images/blindsopen48.png" title="' + $.i18n("Open Blinds") +'" onclick="SwitchLight(' + item.idx + ',\'Off\',RefreshFavorites);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="40">';
+										img2='<img src="images/blinds48sel.png" title="' + $.i18n("Close Blinds") +'" onclick="SwitchLight(' + item.idx + ',\'On\',RefreshFavorites);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="40">';
+									}
+									else {
+										img='<img src="images/blindsopen48sel.png" title="' + $.i18n("Open Blinds") +'" onclick="SwitchLight(' + item.idx + ',\'Off\',RefreshFavorites);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="40">';
+										img2='<img src="images/blinds48.png" title="' + $.i18n("Close Blinds") +'" onclick="SwitchLight(' + item.idx + ',\'On\',RefreshFavorites);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="40">';
 									}
 								}
 								else if (item.SwitchType == "Dimmer") {
@@ -1413,6 +1435,18 @@ function ShowFavorites()
 										}
 								}
 							}               
+							else if (item.SwitchType == "Blinds Percentage") {
+								if (item.Status == 'Closed') {
+									status=
+										'<button class="btn btn-mini" type="button" onclick="SwitchLight(' + item.idx + ',\'Off\',RefreshFavorites);">' + $.i18n("Open") +'</button> ' +
+										'<button class="btn btn-mini btn-info" type="button" onclick="SwitchLight(' + item.idx + ',\'On\',RefreshFavorites);">' + $.i18n("Closed") +'</button>';
+								}
+								else {
+									status=
+										'<button class="btn btn-mini btn-info" type="button" onclick="SwitchLight(' + item.idx + ',\'Off\',RefreshFavorites);">' + $.i18n("Open") +'</button> ' +
+										'<button class="btn btn-mini" type="button" onclick="SwitchLight(' + item.idx + ',\'On\',RefreshFavorites);">' + $.i18n("Close") +'</button>';
+								}
+							}
 							else if (item.SwitchType == "Dimmer") {
 								var img="";
 								if (
@@ -1487,11 +1521,17 @@ function ShowFavorites()
 							if (item.SwitchType == "Dimmer") {
 								xhtm+='<tr>';
 								xhtm+='<td colspan="2" style="border:0px solid red; padding-top:10px; padding-bottom:10px;">';
-								xhtm+='<div style="margin-top: -11px; margin-left: 24px;" class="dimslider" id="slider" data-idx="' + item.idx + '" data-maxlevel="' + item.MaxDimLevel + '" data-svalue="' + item.LevelInt + '"></div>';
+								xhtm+='<div style="margin-top: -11px; margin-left: 24px;" class="dimslider dimslidernorm" id="slider" data-idx="' + item.idx + '" data-type="norm" data-maxlevel="' + item.MaxDimLevel + '" data-svalue="' + item.LevelInt + '"></div>';
 								xhtm+='</td>';
 								xhtm+='</tr>';
 							}
-										
+							else if (item.SwitchType == "Blinds Percentage") {
+								xhtm+='<tr>';
+								xhtm+='<td colspan="2" style="border:0px solid red; padding-top:10px; padding-bottom:10px;">';
+								xhtm+='<div style="margin-top: -11px; margin-left: 24px;" class="dimslider dimslidersmall" id="slider" data-idx="' + item.idx + '" data-type="blinds" data-maxlevel="' + item.MaxDimLevel + '" data-svalue="' + item.LevelInt + '"></div>';
+								xhtm+='</td>';
+								xhtm+='</tr>';
+							}
 						}
 						else {
 							if (data.DashboardType==0) {
@@ -1501,7 +1541,7 @@ function ShowFavorites()
 								xhtm='\t<div class="span3 movable" id="light_' + item.idx +'">\n';
 							}
 							xhtm+='\t  <section>\n';
-							if ((item.Type.indexOf('Blind') == 0)||(item.SwitchType == "Blinds")||(item.SwitchType == "Blinds Inverted")) {
+							if ((item.Type.indexOf('Blind') == 0)||(item.SwitchType == "Blinds")||(item.SwitchType == "Blinds Inverted")||(item.SwitchType == "Blinds Percentage")) {
 								if ((item.SubType=="RAEX")||(item.SubType.indexOf('RollerTrol') == 0)) {
 									xhtm+='\t    <table id="itemtablesmalltrippleicon" border="0" cellpadding="0" cellspacing="0">\n';
 								}
@@ -1614,6 +1654,16 @@ function ShowFavorites()
 									}
 								}
 							}               
+							else if (item.SwitchType == "Blinds Percentage") {
+								if (item.Status == 'Closed') {
+									xhtm+='\t      <td id="img"><img src="images/blindsopen48.png" title="' + $.i18n("Open Blinds") +'" onclick="SwitchLight(' + item.idx + ',\'Off\',RefreshFavorites);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="40"></td>\n';
+									xhtm+='\t      <td id="img2"><img src="images/blinds48sel.png" title="' + $.i18n("Close Blinds") +'" onclick="SwitchLight(' + item.idx + ',\'On\',RefreshFavorites);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="40"></td>\n';
+								}
+								else {
+									xhtm+='\t      <td id="img"><img src="images/blindsopen48sel.png" title="' + $.i18n("Open Blinds") +'" onclick="SwitchLight(' + item.idx + ',\'Off\',RefreshFavorites);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="40"></td>\n';
+									xhtm+='\t      <td id="img2"><img src="images/blinds48.png" title="' + $.i18n("Close Blinds") +'" onclick="SwitchLight(' + item.idx + ',\'On\',RefreshFavorites);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="40"></td>\n';
+								}
+							}
 							else if (item.SwitchType == "Dimmer") {
 								if (
 										(item.Status == 'On')||
@@ -1677,7 +1727,10 @@ function ShowFavorites()
 										'\t      <td id="status">' + TranslateStatus(item.Status) + '</td>\n' +
 										'\t      <td id="lastupdate">' + item.LastUpdate + '</td>\n';
 							if (item.SwitchType == "Dimmer") {
-								xhtm+='<td><div style="margin-left:50px; margin-top: 0.2em;" class="dimslider" id="slider" data-idx="' + item.idx + '" data-maxlevel="' + item.MaxDimLevel + '" data-svalue="' + item.LevelInt + '"></div></td>';
+								xhtm+='<td><div style="margin-left:50px; margin-top: 0.2em;" class="dimslider dimslidernorm" id="slider" data-idx="' + item.idx + '" data-type="norm" data-maxlevel="' + item.MaxDimLevel + '" data-svalue="' + item.LevelInt + '"></div></td>';
+							}
+							else if (item.SwitchType == "Blinds Percentage") {
+								xhtm+='<td><div style="margin-left:94px; margin-top: 0.2em;" class="dimslider dimslidersmall" id="slider" data-idx="' + item.idx + '" data-type="blinds" data-maxlevel="' + item.MaxDimLevel + '" data-svalue="' + item.LevelInt + '"></div></td>';
 							}
 							xhtm+=
 										'\t    </tr>\n' +
@@ -2596,11 +2649,13 @@ function ShowFavorites()
 		//Slider Events
 		create: function(event,ui ) {
 			$( this ).slider( "option", "max", $( this ).data('maxlevel'));
+			$( this ).slider( "option", "type", $( this ).data('type'));
 			$( this ).slider( "value", $( this ).data('svalue')+1 );
 		},
 		slide: function(event, ui) { //When the slider is sliding
 			clearInterval($.setDimValue);
 			var maxValue=$( this ).slider( "option", "max");
+			var dtype=$( this ).slider( "option", "type");
 			var fPercentage=0;
 			if (ui.value!=1) {
 				fPercentage=parseInt((100.0/(maxValue-1))*((ui.value-1)));
@@ -2611,15 +2666,21 @@ function ShowFavorites()
 			if (typeof obj != 'undefined') {
 				var img="";
 				var status="";
+				var TxtOn="On";
+				var TxtOff="Off";
+				if (dtype=="blinds") {
+					TxtOn="Open";
+					TxtOff="Close";
+				}
 				if (($.myglobals.DashboardType==2)||(window.myglobals.ismobile==true)) {
 					if (fPercentage==0)
 					{
-						status='<button class="btn btn-mini" type="button">' + $.i18n("On") +'</button> ' +
-							'<button class="btn btn-mini btn-info" type="button">' + $.i18n("Off") +'</button>';
+						status='<button class="btn btn-mini" type="button">' + $.i18n(TxtOn) +'</button> ' +
+							'<button class="btn btn-mini btn-info" type="button">' + $.i18n(TxtOff) +'</button>';
 					}
 					else {
-						status='<button class="btn btn-mini btn-info" type="button">' + $.i18n("On") +': ' + fPercentage + "% </button> " +
-							'<button class="btn btn-mini" type="button">' + $.i18n("Off") +'</button>';
+						status='<button class="btn btn-mini btn-info" type="button">' + $.i18n(TxtOn) +': ' + fPercentage + "% </button> " +
+							'<button class="btn btn-mini" type="button">' + $.i18n(TxtOff) +'</button>';
 					}
 					if ($(id + " #status").html()!=status) {
 						$(id + " #status").html(status);
@@ -2635,8 +2696,10 @@ function ShowFavorites()
 						img='<img src="images/dimmer48-on.png" title="' + $.i18n("Turn Off") +'" onclick="SwitchLight(' + idx + ',\'Off\',RefreshFavorites);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="40">';
 						status='' + $.i18n("Set Level") +': ' + fPercentage + " %";
 					}
-					if ($(id + " #img").html()!=img) {
-						$(id + " #img").html(img);
+					if (dtype!="blinds") {
+						if ($(id + " #img").html()!=img) {
+							$(id + " #img").html(img);
+						}
 					}
 					if ($(id + " #status").html()!=status) {
 						$(id + " #status").html(status);
@@ -2693,11 +2756,18 @@ function ShowFavorites()
 function ResizeDimSliders()
 {
 	var width=$(".span4").width()-70;
-	$("#dashcontent .span4 .dimslider").width(width);
+	$("#dashcontent .span4 .dimslidernorm").width(width);
 	width=$(".span3").width()-70;
-	$("#dashcontent .span3 .dimslider").width(width);
+	$("#dashcontent .span3 .dimslidernorm").width(width);
 	width=$(".mobileitem").width()-63;
-	$("#dashcontent .mobileitem .dimslider").width(width);
+	$("#dashcontent .mobileitem .dimslidernorm").width(width);
+
+	width=$(".span4").width()-118;
+	$("#dashcontent .span4 .dimslidersmall").width(width);
+	width=$(".span3").width()-112;
+	$("#dashcontent .span3 .dimslidersmall").width(width);
+	width=$(".mobileitem").width()-63;
+	$("#dashcontent .mobileitem .dimslidersmall").width(width);
 }
 
 $(document).ready(function() {
