@@ -239,7 +239,7 @@ function RefreshData()
 
 $(document).ready(function() {
 	$.roomplan=1;
-	$.domoticzurl="http://127.0.0.1:8080";
+	$.domoticzurl="http://192.168.0.41:8080";
 	//format: idx, value, label, comment
 	$.PageArray = [
 		['630','Temp','itemp','woonkamer'],
