@@ -1525,6 +1525,16 @@ function RefreshLights()
 								}
 							}
 						}
+						else if (item.SwitchType == "Blinds Percentage") {
+							if (item.Status == 'Closed') {
+								img='<img src="images/blindsopen48.png" title="' + $.i18n("Open Blinds") + '" onclick="SwitchLight(' + item.idx + ',\'Off\',RefreshLights);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="40">';
+								img2='<img src="images/blinds48sel.png" title="' + $.i18n("Close Blinds") + '" onclick="SwitchLight(' + item.idx + ',\'On\',RefreshLights);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="40">';
+							}
+							else {
+								img='<img src="images/blindsopen48sel.png" title="' + $.i18n("Open Blinds") + '" onclick="SwitchLight(' + item.idx + ',\'Off\',RefreshLights);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="40">';
+								img2='<img src="images/blinds48.png" title="' + $.i18n("Close Blinds") + '" onclick="SwitchLight(' + item.idx + ',\'On\',RefreshLights);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="40">';
+							}
+						}
 						else if (item.SwitchType=="Smoke Detector") {
 								if (
 										(item.Status == 'Panic')||
@@ -1715,7 +1725,7 @@ function ShowLights()
 			if (item.SwitchType == "Doorbell") {
 				xhtm+='\t    <table id="itemtablenostatus" border="0" cellpadding="0" cellspacing="0">\n';
 			}
-			else if ((item.SwitchType == "Blinds")||(item.SwitchType == "Blinds Inverted")) {
+			else if ((item.SwitchType == "Blinds")||(item.SwitchType == "Blinds Inverted")||(item.SwitchType == "Blinds Percentage")) {
 				if ((item.SubType=="RAEX")||(item.SubType.indexOf('RollerTrol') == 0)) {
 					xhtm+='\t    <table id="itemtabletrippleicon" border="0" cellpadding="0" cellspacing="0">\n';
 				}
@@ -1834,6 +1844,17 @@ function ShowLights()
 				}
 			}
           }
+          else if (item.SwitchType == "Blinds Percentage") {
+			bIsDimmer=true;
+			if (item.Status == 'Closed') {
+				xhtm+='\t      <td id="img"><img src="images/blindsopen48.png" title="' + $.i18n("Open Blinds") + '" onclick="SwitchLight(' + item.idx + ',\'Off\',RefreshLights);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="40"></td>\n';
+				xhtm+='\t      <td id="img2"><img src="images/blinds48sel.png" title="' + $.i18n("Close Blinds") + '" onclick="SwitchLight(' + item.idx + ',\'On\',RefreshLights);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="40"></td>\n';
+			}
+			else {
+				xhtm+='\t      <td id="img"><img src="images/blindsopen48sel.png" title="' + $.i18n("Open Blinds") + '" onclick="SwitchLight(' + item.idx + ',\'Off\',RefreshLights);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="40"></td>\n';
+				xhtm+='\t      <td id="img2"><img src="images/blinds48.png" title="' + $.i18n("Close Blinds") + '" onclick="SwitchLight(' + item.idx + ',\'On\',RefreshLights);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="40"></td>\n';
+			}
+          }
 			else if (item.SwitchType=="Smoke Detector") {
 				if (
 						(item.Status == 'Panic')||
@@ -1939,13 +1960,16 @@ function ShowLights()
 							xhtm+='\t      <td id="img"><img src="images/' + item.Image + '48_Off.png" title="' + $.i18n("Turn On") + '" onclick="SwitchLight(' + item.idx + ',\'On\',RefreshLights);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="48"></td>\n';
 						}
 				  }
-          xhtm+=
+			xhtm+=
                 '\t      <td id="status">' + TranslateStatus(item.Status) + '</td>\n' +
                 '\t      <td id="lastupdate">' + item.LastUpdate + '</td>\n' +
                 '\t      <td id="type">' + item.Type + ', ' + item.SubType + ', ' + item.SwitchType;
-          if (item.SwitchType == "Dimmer") {
-						xhtm+='<br><div style="margin-left:60px;" class="dimslider" id="slider" data-idx="' + item.idx + '" data-maxlevel="' + item.MaxDimLevel + '" data-svalue="' + item.LevelInt + '"></div>';
-          }
+			if (item.SwitchType == "Dimmer") {
+				xhtm+='<br><div style="margin-left:60px;" class="dimslider" id="slider" data-idx="' + item.idx + '" data-type="norm" data-maxlevel="' + item.MaxDimLevel + '" data-svalue="' + item.LevelInt + '"></div>';
+			}
+			else if (item.SwitchType == "Blinds Percentage") {
+				xhtm+='<br><div style="margin-left:60px;" class="dimslider" id="slider" data-idx="' + item.idx + '" data-type="blinds" data-maxlevel="' + item.MaxDimLevel + '" data-svalue="' + item.LevelInt + '"></div>';
+			}
 			xhtm+=
 						'</td>\n' +
 						'\t      <td>';
@@ -2051,11 +2075,13 @@ function ShowLights()
 		//Slider Events
 		create: function(event,ui ) {
 			$( this ).slider( "option", "max", $( this ).data('maxlevel'));
+			$( this ).slider( "option", "type", $( this ).data('type'));
 			$( this ).slider( "value", $( this ).data('svalue')+1 );
 		},
 		slide: function(event, ui) { //When the slider is sliding
 			clearInterval($.setDimValue);
 			var maxValue=$( this ).slider( "option", "max");
+			var dtype=$( this ).slider( "option", "type");
 			var fPercentage=0;
 			if (ui.value!=1) {
 				fPercentage=parseInt((100.0/(maxValue-1))*((ui.value-1)));
@@ -2075,8 +2101,10 @@ function ShowLights()
 					img='<img src="images/dimmer48-on.png" title="' + $.i18n("Turn Off") +'" onclick="SwitchLight(' + idx + ',\'Off\',RefreshLights);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="48">';
 					status="Set Level: " + fPercentage + " %";
 				}
-				if ($(id + " #img").html()!=img) {
-					$(id + " #img").html(img);
+				if (dtype!="blinds") {
+					if ($(id + " #img").html()!=img) {
+						$(id + " #img").html(img);
+					}
 				}
 				if ($(id + " #status").html()!=status) {
 					$(id + " #status").html(status);
